--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,7 +18,7 @@
 
     .full-hero {
       background-color: #c7dbfc;
-      height: 25vh;
+      height: 30vh;
       text-align: center;
       margin: 0;
       clear: both;
@@ -39,13 +39,17 @@
 
     .top-nav li {
       list-style: none;
-      padding: 0 3% 0 3%;
+      box-sizing: border-box;
+      margin: 0 3% 0 3%;
+      padding: .85em 0;
       text-align: center;
-      display: inline;
-    }
-
-    .top-nav > li {
       display: inline-block;
+      background-color: rgba(150, 150, 150, 0.5);
+      border-radius: 99px;
+      width: 3em;
+      height: 3em;
+      text-align: center;
+      vertical-align: middle;
     }
 
     .top-nav > li a {
@@ -58,6 +62,8 @@
       background-color: #c0e0c3;
       overflow: hidden;
       padding-top: 20px;
+      margin: 0 auto;
+
     }
 
     .card-wrapper > h2 {
@@ -85,14 +91,37 @@
       text-align: center;
     }
 
+    .card img {
+      width: 100%;
+    }
+
     .card-text {
       font-size: 1em;
+      line-height: 1.5;
+    }
+
+    .card-heading h3{
+      color: #fff;
+      font-size: 1.5em;
+      margin: -40px 0 1em;
+      text-align: center;
     }
 
     .card-social-link a {
       display: inline-block;
       color: blue;
       background-color: rgba(150, 150, 150, 0.5);
-      height: 36px;
-      width: 36px;
+      border-radius: 99px;
+      height: 2.5em;
+      width: 2.5em;
+      padding-top: .85em;
+      margin-top: 5px;
+      font-family: Roboto, Helvetica Light, Helvetica;
+      font-weight: bold;
+      text-align: center;
+      text-decoration: none;
+      box-sizing: border-box;
+      font-size: .9rem;
+      line-height: 1;
+      vertical-align: middle;
     }
