add social-link include + modify footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,11 +7,8 @@
   <div class="hero-headline">
     <h1>My First Real Website</h1>
   </div>
-  <ul class="hero-links">
-    <li><a href="google.com" target="_blank">link</a></li>
-    <li><a href="google.com" target="_blank">link</a></li>
-    <li><a href="google.com" target="_blank">link</a></li>
-    <li><a href="google.com" target="_blank">link</a></li>
+  <ul class="hero-links social-links">
+    {% include social-links.html %}
   </ul>
 </div>
 <div class="card-wrapper">
