--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,5 +5,8 @@
    <ul class="footer-nav nav-links">
     {% include nav-links.html %}
   </ul>
+  <ul class="footer-social social-links">
+    {% include social-links.html %}
+  </ul>
   <h3>Learn Enough <span>to be Dangerous</span></h3>
 </footer>
