--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,91 +3,11 @@
 {% include head.html %}
 <body>
 {% include header.html %}
-<div class="full-hero hero-home">
-  <div class="hero-headline">
-    <h1>My First Real Website</h1>
-  </div>
-  <ul class="hero-links social-links">
-    {% include social-links.html %}
-  </ul>
+
+<div class="content-container">
+{{ content }}
 </div>
-<div class="card-wrapper">
-  <div class="card-wrapper-headline">
-    <h2>Lorem ipsum</h2>
-  </div>
-  <div class="cards">
-    <div class="card-heading">
-      <img src="http://placekitten.com/g/400/400">
-      <h3>This is an h3</h3>
-    </div>
-    <div class="card-text">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
-    </div>
-    <div class="card-social-link">
-      <a href="https://www.yahoo.com" target="_blank">FB</a>
-    </div>
-  </div>
-  <div class="cards">
-    <div class="card-heading">
-      <img src="http://placekitten.com/g/400/400">
-      <h3>This is an h3</h3>
-    </div>
-    <div class="card-text">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
-    </div>
-    <div class="card-social-link">
-      <a href="https://www.yahoo.com" target="_blank">IG</a>
-    </div>
-  </div>
-  <div class="cards">
-    <div class="card-heading">
-      <img src="http://placekitten.com/g/400/400">
-      <h3>This is an h3</h3>
-    </div>
-    <div class="card-text">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
-    </div>
-    <div class="card-social-link">
-      <a href="https://www.yahoo.com" target="_blank">Tw</a>
-    </div>
-  </div>
-  <div class="cards">
-    <div class="card-heading">
-      <img src="http://placekitten.com/g/400/400">
-      <h3>This is an h3</h3>
-    </div>
-    <div class="card-text">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
-    </div>
-    <div class="card-social-link">
-      <a href="https://www.yahoo.com" target="_blank">FB</a>
-    </div>
-  </div>
-</div>
+
 {% include footer.html %}
 </body>
 </html>
