--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,7 @@
   <title>Testing</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="/repos/fonts/fontawesome-free-5.0.10/web-fonts-with-css/css">
   <link rel="stylesheet" type="text/css" href="/css/reset.css">
   <link rel="stylesheet" type="text/css" href="/css/stylesheet.css">
 </head>
