--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -1,3 +1,3 @@
-  <li><a href="google.com" target="_blank">FB</a></li>
-  <li><a href="google.com" target="_blank">IG</a></li>
-  <li><a href="google.com" target="_blank">Tw</a></li>
+  <li><a href="google.com" target="_blank"><i class="fa fa-facebook"></i></a></li>
+  <li><a href="google.com" target="_blank"><i class="fa fa-instagram"></i></a></li>
+  <li><a href="google.com" target="_blank"><i class="fa fa-twitter"></i></a></li>
