--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,16 @@
 <head>
-  <title>Testing</title>
+  {% if page.title %}
+  <title>{{ page.title }}</title>
+  {% else %}
+  <title>Test Page: Don't Panic</title>
+  {% endif %}
+  <meta property="og:title" content="{{ page.title }} - Website Name">
+  {% if page.description %}
+  <meta property="og:description" content="{{ page.description }}">
+  {% else %}
+  <meta property="og:description" content="This site is dangerous.">
+  {% endif %}
+  <meta property="og:type" content="website">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/images/favicon.png" rel="icon">
@@ -8,4 +19,10 @@
   <link rel="stylesheet" type="text/css" href="/fonts/font-awesome-free-5.0.10-2/web-fonts-with-css/css/fontawesome-all.css">
   <link rel="stylesheet" type="text/css" href="/css/reset.css">
   <link rel="stylesheet" type="text/css" href="/css/stylesheet.css">
+  <script src="/js/gallery.js"></script>
+  <script type="text/javascript">
+    document.addEventListener("DOMContentLoaded", function() {
+      activateGallery();
+    });
+  </script>
 </head>
